---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 16.0
@main(v0: float) {
.b1_:
  c2_: float = const 0;
  v3_: bool = feq v0 c2_;
  br v3_ .b4_ .b5_;
.b4_:
  print c2_;
  ret;
  jmp .b6_;
.b5_:
  v7_: bool = feq v0 v0;
<<<<<<< HEAD
  v8_: bool = flt v0 c2_;
  v9_: bool = not v8_;
  c10_: bool = const false;
  v11_: bool = select v7_ v9_ c10_;
  v12_: float = id c2_;
  v13_: bool = id c10_;
  br v7_ .b14_ .b15_;
.b14_:
  v16_: bool = flt v0 c2_;
  v17_: float = id c2_;
  v18_: bool = id c10_;
  br v16_ .b19_ .b20_;
.b19_:
  v12_: float = id v17_;
  v13_: bool = id v18_;
.b15_:
  br v11_ .b21_ .b22_;
.b21_:
  ret;
  jmp .b6_;
.b22_:
  v23_: float = fdiv v12_ v12_;
  print v23_;
  ret;
  jmp .b6_;
.b20_:
  c24_: float = const 1;
  c25_: float = const 1.0000000001;
  c26_: float = const 0.9999999999;
  c27_: float = const 2;
  v28_: float = id c2_;
  v29_: float = id c24_;
  v30_: float = id c25_;
  v31_: float = id c26_;
  v32_: float = id c27_;
  v33_: float = id v0;
.b34_:
  v35_: float = fdiv v33_ v29_;
  v36_: float = fadd v29_ v35_;
  v37_: float = fdiv v36_ v32_;
  v38_: float = fdiv v37_ v29_;
  v39_: bool = fle v38_ v30_;
  v40_: bool = fge v38_ v31_;
  v41_: bool = and v39_ v40_;
  v42_: bool = not v41_;
  v28_: float = id v28_;
  v29_: float = id v37_;
  v30_: float = id v30_;
  v31_: float = id v31_;
  v32_: float = id v32_;
  v33_: float = id v33_;
  br v42_ .b34_ .b43_;
.b43_:
  print v29_;
  c44_: bool = const true;
  v17_: float = id v28_;
  v18_: bool = id c44_;
  v12_: float = id v17_;
  v13_: bool = id v18_;
  jmp .b15_;
=======
  c8_: bool = const false;
  v9_: float = id c2_;
  v10_: bool = id c8_;
  br v7_ .b11_ .b12_;
.b11_:
  v13_: bool = flt v0 c2_;
  br v13_ .b14_ .b15_;
.b15_:
  c16_: float = const 1;
  c17_: float = const 1.0000000001;
  c18_: float = const 0.9999999999;
  c19_: float = const 2;
  v20_: float = id c16_;
  v21_: float = id c17_;
  v22_: float = id c18_;
  v23_: float = id c19_;
  v24_: float = id v0;
.b25_:
  v26_: float = fdiv v24_ v20_;
  v27_: float = fadd v20_ v26_;
  v28_: float = fdiv v27_ v23_;
  v29_: float = fdiv v28_ v20_;
  v30_: bool = fle v29_ v21_;
  v31_: bool = fge v29_ v22_;
  v32_: bool = and v30_ v31_;
  v33_: bool = not v32_;
  v20_: float = id v28_;
  v21_: float = id v21_;
  v22_: float = id v22_;
  v23_: float = id v23_;
  v24_: float = id v24_;
  br v33_ .b25_ .b34_;
.b34_:
  print v20_;
.b14_:
  v35_: bool = not v13_;
  v9_: float = id c2_;
  v10_: bool = id v35_;
  br v10_ .b36_ .b37_;
.b36_:
  ret;
  jmp .b6_;
.b37_:
  v38_: float = fdiv c2_ c2_;
  print v38_;
  ret;
  jmp .b6_;
.b12_:
  v38_: float = fdiv c2_ c2_;
  print v38_;
  ret;
>>>>>>> 0dff68b7 (snapshots)
.b6_:
}
